# Voice-Assistant

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  IMPLEMENTATION_ROADMAP.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
config/: default.yaml
scripts/: run.py  run_web.py
src/voice_assistant/: __init__.py  ai_engine.py  assistant.py  calculator.py  commands.py  config.py  conversation.py  datetime_cmd.py  dictionary.py  jokes.py  logging_config.py  news.py  runtime.py  speech.py  system_info.py  tts.py  weather.py  web.py  wiki.py
src/voice_assistant/frontend/: app.js  index.html  styles.css
tests/: __init__.py  test_ai_engine.py  test_calculator.py  test_commands.py  test_config.py  test_conversation.py  test_datetime_cmd.py  test_dictionary.py  test_jokes.py  test_news.py  test_system_info.py  test_weather.py  test_web.py  test_wiki.py
